--- a/dfply_exploration.ipynb
+++ b/dfply_exploration.ipynb
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### As you can see, unlike dplyr, dfply.distinct outputs all columns and not just the \"name\" column"
+    "**As you can see, unlike dplyr, dfply.distinct outputs all columns and not just the \"name\" column**"
    ]
   },
   {
@@ -361,6 +361,15 @@
    "metadata": {},
    "source": [
     "## Filter for products with price > 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Filter for mutiple conditions like (price > 100 OR mfr_id < 3) is not supported. Only conditions like \n",
+    "price >100 AND mfr_id > 4 are supported and these conditions need to be separated by \",\". Eg. \n",
+    "mast(price > 100,mfr_id > 4)**"
    ]
   },
   {
@@ -474,6 +483,13 @@
    "metadata": {},
    "source": [
     "## Merge Product with manufacturers dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**For joining, names of the column having the key have to be consistent in both the tables**"
    ]
   },
   {
@@ -616,13 +632,6 @@
    "source": [
     "prod_manu = prod >> left_join(manu, by = \"mfr_id\") #prod %>% left_join(manu, by = \"mfr_id\")\n",
     "prod_manu"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Names have to be consistent to join"
    ]
   },
   {
@@ -929,7 +938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Its a must to pass a column name to n or n_distinct - Need to pass the granularity of the table to obtain frequency"
+    "**Its a must to pass a column name to n or n_distinct - Need to pass the granularity of the table to obtain frequency**"
    ]
   },
   {
